--- a/Figures/Figure3and4.ipynb
+++ b/Figures/Figure3and4.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
     "        )\n",
     "        ax.axvline(1)\n",
     "\n",
-    "        fig_psths.savefig(f\"fs_rs_area_{a}.svg\", dpi=300)\n",
+    "        fig_psths.savefig(f\"Figures/Figure4/fs_rs_area_{a}.svg\", dpi=300)\n",
     "\n",
     "    if zoomed:\n",
     "        fig, ax = plot_with_size(25 * 4, 21.6 * 4)\n",
