add all plots from the main

--- a/Figures/Figure3and4.ipynb
+++ b/Figures/Figure3and4.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
     "        )\n",
     "        ax.axvline(1)\n",
     "\n",
-    "        fig_psths.savefig(f\"Figures/Figure4/fs_rs_area_{a}.svg\", dpi=300)\n",
+    "        fig_psths.savefig(f\"Figures/Figure4/fs_rs_area_{a}.pdf\", dpi=300)\n",
     "\n",
     "    if zoomed:\n",
     "        fig, ax = plot_with_size(25 * 4, 21.6 * 4)\n",
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
     "rec = patches.Rectangle((xstart,ystart), lenx, leny,facecolor='none',edgecolor=\"#00afa7\")\n",
     "quiet = (x[:,0]>xstart) & (x[:,0]<xstart+lenx) & (x[:,1]<ystart+leny) & (x[:,1]>ystart) & (color[:-4]==\"black\")\n",
     "ax.add_patch(rec)\n",
-    "\n",
+    "fig.savefig(\"Figures/Figure4/umap.pdf\")\n",
     "plt.figure()\n",
     "plt.plot(filt_jaw[:,active,0].cpu())\n",
     "plt.figure()\n",
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
     "        # ax.plot(ff_time, filt_data_test[:,quiet][..., area_index==i].mean((1,2)).cpu())\n",
     "        ax.spines[\"top\"].set_visible(False)\n",
     "        ax.spines[\"right\"].set_visible(False)\n",
-    "        # fig.savefig(f\"RSNN_Figures/{figurename}/active_{i}.pdf\", dpi=300,pad_inches=0, bbox_inches=\"tight\")\n",
+    "        fig.savefig(f\"Figures/Figure4/active_quiet_area_{i}.pdf\", dpi=300,pad_inches=0, bbox_inches=\"tight\")\n",
     "    fig,ax = plot_with_size(40*4, 30*4)\n",
     "    ax.plot(ff_time,ff_jaw[:,active].mean((1,2)).cpu())\n",
     "    ax.plot(ff_time, ff_jaw[:,quiet].mean((1,2)).cpu())\n"
